# langchain-genai

./: main.py  pyproject.toml  requirements.txt
agent-topics/: 1_tool.ipynb  2_toocalling.ipynb  3_currency_convertion_project.ipynb
langchain-components/2_prompts/: 2_prompt_generator.py  6_chat_prompt_template.py
langchain-components/3_structured_output/: 6_with_structured_output_json.py
langchain-components/4_output_parsers/: 3_jsonoutputparser.py  4_structuredoutputparser.py
langchain-components/6_runnables/: 1_runnable_sequence.py  2_runnable_parallel.py  3_runnable_passthrough.py  4_runnable_lambda.py
langchain-components/chains/: 3_parallel_chain.py
langchain-components/output_parsers/: 2_stroutputparser1.py
langchain-components/prompts/: 4_messages.py  5_chatbot.py
langchain-components/runnables/: 5_runnable_branch.py
practices/: agent_response.ipynb  deterministic_output.ipynb  find_weather_agent.ipynb
rag-components/1_document_loaders/1_text_loader/: text_loader.py
rag-components/1_document_loaders/2_pdf_loader/: pdf_loader.py
rag-components/1_document_loaders/3_directory_loader/: directory_loader.py
rag-components/1_document_loaders/4_webbase_loader/: webbase_loader.py
rag-components/1_document_loaders/5_csv_loader/: csv_loader.py
topics/chains/: 1_simple_chain.py  2_sequential_chain.py  4_conditional_chain.py
topics/models/: 1_chatmodels.ipynb  2_embeddingmodels.ipynb  3_project.ipynb
topics/output_parsers/: 1_stroutputparser.py  5_pydanticoutputparser.py
topics/prompts/: 1_prompts_ui.py  3_prompt_template.py  8_message_placeholder.py
topics/structured_output/: 1-typeddict_demo.py  2_with_structured_output_typeddict.py  3_pydantic_demo.py  4_with_structured_output_pydantic.py
