[project]
name = "langchain-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.6",
    "grandalf>=0.8",
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
